--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
     - HXCPP=3.4.49
   matrix:
     - EXAMPLES=no-backend
-    # - EXAMPLES=nme NME=5.6.4
+    - EXAMPLES=nme NME=6.0.58
     - EXAMPLES=openfl3 OPENFL=3.6.1 LIME=2.9.1
     - EXAMPLES=openfl4 OPENFL=4.6.0 LIME=3.6.2
     - EXAMPLES=openfl5 OPENFL=5.0.0 LIME=4.1.0
